@@ -7,7 +7,7 @@
     <button action="online" i18n="true" text="mainmenu.online" property="plafname=MainButton" name="OnlineButton"/>
     <button action="manual" i18n="true" mnemonic="72" text="mainmenu.help" property="plafname=MainButton"/>
     <button action="about" i18n="true" mnemonic="65" text="mainmenu.about" property="plafname=MainButton"/>
-    <button action="donate" icon="/donate.gif" property="plafname=DonateButton"/>
+    <button action="donate" icon="/donate.png" property="plafname=DonateButton"/>
     <button action="quit" i18n="true" mnemonic="27" text="mainmenu.quit" property="plafname=MainButton"/>
     <!--
     <button action="join game" i18n="true" mnemonic="74" text="mainmenu.joingame"/>
